--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.security.user.name=root
-spring.security.user.password=123
+#spring.security.user.name=root
+#spring.security.user.password=123
 
