feat: change strategy

--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -29,11 +29,6 @@ jobs:
           mvn clean package
 
       - name: Pull Request para develop
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: "Build realizado na branch ${{ github.ref_name }} e pronto para merge"
-          branch: "${{ github.ref_name }}"
-          base: develop
-          title: "Build pronto para merge na develop"
-          body: |
-            Este PR foi criado automaticamente após a conclusão bem-sucedida do build.
+        run: gh pr create -B base_branch -H develop --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
