--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Pull Request para develop
-        run: gh pr create -B base_branch -H develop --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
+        run: gh pr create -B ${{ github.ref_name }} -H develop --title 'Merge branch_to_merge into base_branch' --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
