feat: change strategy

--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -11,8 +11,8 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v4
 
-      - name: Atualizar branch develop
-        run: git fetch origin develop && git checkout develop && git pull origin develop
+      - name: Atualizar develop
+        run: git checkout develop && git pull
 
       - name: Voltar para a branch atual
         run: git checkout ${{ github.ref_name }}
