--- a/.github/workflows/01-build.yaml
+++ b/.github/workflows/01-build.yaml
@@ -1,4 +1,4 @@
-name: 03 - Actions
+name: 01 - Build And PR
 
 on:
   push:
@@ -11,13 +11,33 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Java SDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+
+      - name: Executar scripts
+        run: |
+          git branch
+          java --version 
+          mvn clean package
+
       - name: Atualizar branch develop
+        if: ${{ success() }}
         run: git fetch origin develop && git checkout develop && git pull origin develop
 
       - name: Voltar para a branch atual
+        if: ${{ success() }}
         run: git checkout ${{ github.ref_name }}
 
       - name: Verificar se há diferenças
+        if: ${{ success() }}
         run: |
           if git diff --quiet origin/develop; then
             echo "No changes detected between branches"
@@ -25,6 +45,7 @@ jobs:
           fi
 
       - name: Criar Pull Request para develop
+        if: ${{ success() }}
         run: gh pr create -B develop -H ${{ github.ref_name }} --title 'Merge feature/add-unit-test into develop' --body 'Created by Github action'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
