--- a/.github/workflows/02-unit-test.yaml
+++ b/.github/workflows/02-unit-test.yaml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: 02 - Unit Test
 on:
   push:
     branches: "develop"
@@ -6,14 +6,12 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Git Checkout
+      - name: Git Checkout
         uses: actions/checkout@v4
-
-      -   name: Setup Java SDK
-          uses: actions/setup-java@v4
-          with:
-            distribution: 'temurin'
-            java-version: '21'
-      -   name: Unit tests
-          run: mvn test
+      - name: Setup Java SDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - name: Unit tests
+        run: mvn test
